--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,6 +86,13 @@ div li{
 	margin:auto;
 	/* font-size:1rem; */
 }
+
+.nolist li {
+	display: inline-block;
+    /* You can also add some margins here to make it look prettier */
+    /* zoom:1; */
+	/* *display:inline; */
+}
 #myname{
 	font-size:4rem;
 	text-transform: none;
@@ -116,10 +123,61 @@ div li{
 #buttonp{
 	font-size:1rem;
 }
+.icons.major{
+	/* padding:1rem; */
+	margin:0;
+	font-size:1rem;
+}
+
+.bg-modal {
+	background-color: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal-contents {
+	height: 300px;
+	width: 500px;
+	background-color: white;
+	text-align: center;
+	padding: 20px;
+	position: relative;
+	border-radius: 4px;
+}
+
+.close {
+	position: absolute;
+	top: 0;
+	right: 10px;
+	font-size: 42px;
+	color: #333;
+	transform: rotate(45deg);
+	cursor: pointer;
+	&:hover {
+		color: #666;
+	}
+}
+
+#card{
+	background-color:rgb(19, 77, 104);
+	border:none;
+
+}
+.card-body{
+	background-color: blue;
+}
 #headbutton{
 	padding-left:3rem;
 }
 
+#donphoto{
+	max-height:200px;
+}
 div ul{
 	padding-right:2rem;
 	padding-bottom:2.5rem;
@@ -2478,6 +2536,7 @@ input, select, textarea {
 
 		ul.icons.major {
 			padding: 1em 0;
+			font-size:.7rem;
 		}
 
 			ul.icons.major li {
@@ -4141,7 +4200,28 @@ input, select, textarea {
 		padding-top: 0px;
 		margin-top:0px
 	}
+	#link{
+		/* position:center; */
 
+		font-size:1rem;
+		/* margin-right:rem; */
+		margin-left:.1rem;
+		margin-bottom:.6rem;
+		-webkit-transform: rotate(90deg);
+		-moz-transform: rotate(90deg);
+		-o-transform: rotate(90deg);
+		-ms-transform: rotate(90deg);
+		transform: rotate(45deg);
+	}
+	.abicon{
+		width:2rem;
+	}
+
+
+	.abicon2{
+		width:2.6rem;
+	
+	}
 	body.landing #footer {
 		background-color: rgba(29, 36, 42, 0.9);
 	}
@@ -4165,7 +4245,7 @@ input, select, textarea {
 		background-color: #1d242a;
 	}
 
-	img:hover {
+	.shake img:hover {
 		animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
 		transform: translate3d(0, 0, 0);
 		backface-visibility: hidden;
