--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@ div li{
 }
 
 #aboutbox{
-	background-color: rgba(24, 108, 187, 0.877);
+	background-color:rgba(77, 158, 182, 0.966);
 	padding-left:4rem;
 	font-size:2rem;
 	/* border-radius:25px; */
@@ -99,7 +99,7 @@ div li{
 }
 
 #projectbox{
-	background-color: rgba(77, 158, 182, 0.966);
+	background-color:  rgba(71, 151, 226, 0.877);
 	padding-left:4rem;
 	font-size:2rem;
 	/* border-radius:25px; */
@@ -125,21 +125,21 @@ div li{
 	text-transform: none;
 	text-align:center;
 	letter-spacing: .5rem;
-	padding-left:1.5rem;
+	padding-left:1rem;
 }
 #headp {
 	font-size:1rem;
 	margin-top:1rem;
 	color:white;
 	/* line-height:3rem; */
-	padding-left:1.5rem;
+	padding-left:1rem;
 	margin-bottom:1rem;
 }
 #fullstack {
 	font-size:.8rem;
 	color:white;
 	/* line-height:3rem; */
-	padding-left:1.5rem;
+	padding-left:1rem;
 	margin-bottom:1rem;
 }
 .arrow{
@@ -147,8 +147,10 @@ div li{
 }
 .button{
 	color:blue;
-	font-size:rem;
+	/* font-size:rem; */
 }
+
+
 #buttonp{
 	font-size:.7rem;
 }
@@ -245,7 +247,7 @@ h4{
 }
 #bodytitle{
 	font-size:2rem;
-	background-color: rgba(255, 217, 0, 0.726);
+	background-color: rgba(97, 219, 240, 0.808);
 	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 	border:1px solid black;
 	letter-spacing: .25rem;
